--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+---
+layout: default
+title: lingga
+---
+<div class="blurb">
+	<h1>Hi there!</h1>
+	<p>I'm learning to fly. You should too.</p>
+</div><!-- /.blurb -->
